Fix: Environment table help icon spacing.

--- a/less/essential/admin.less
+++ b/less/essential/admin.less
@@ -15,4 +15,14 @@
     width:100%;
 }
 
+.dir-ltr .environmenttable img.iconhelp {
+    padding-right: 2px;
+    margin-right: .3em;
+}
+
+.dir-rtl .environmenttable img.iconhelp {
+    padding-left: 2px;
+    margin-left: .3em;
+}
+
 /* @end */
